might fix this on mobile

--- a/style.css
+++ b/style.css
@@ -84,3 +84,17 @@ p {
         transform: translate3d(0, 0, 0);
     }
 }
+
+
+@media (max-width: 426px) {
+.container { 
+align-items: center;
+padding: 32px;
+
+}
+.h1 {
+    text-align: center;
+    font-size: 36px;
+
+}
+}
